--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   go_router: ^7.0.1
   flutter_riverpod: ^2.3.6
   shared_preferences: ^2.1.1
+  percent_indicator: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
