--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,3 +91,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+  fonts:
+      - family: Clash Grotesk Display
+        fonts:
+          - asset: fonts/ClashDisplay-Regular.ttf
