--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   shared_preferences: ^2.1.1
   percent_indicator: ^4.0.1
+  flutter_svg: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -72,7 +73,7 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
-     - assets/flutter_dash.png
+     - assets/flutter_dash.svg
      - assets/flutter_icon.png
      - assets/potato_icon.png
      - assets/kmm_icon.png
