--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.1.1
   percent_indicator: ^4.0.1
   flutter_svg: ^2.0.5
+  lottie: ^2.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -78,6 +79,7 @@ flutter:
      - assets/potato_icon.png
      - assets/kmm_icon.png
      - assets/react_native_icon.png
+     - assets/loading_indicator.json
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
