--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
   go_router: ^7.0.1
   flutter_riverpod: ^2.3.6
-  shared_preferences: ^2.1.1
   percent_indicator: ^4.0.1
   flutter_svg: ^2.0.5
   lottie: ^2.3.2
@@ -41,6 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   universal_html: ^2.2.2
+  flutter_oss_licenses: ^2.0.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
+     - assets/dash_result.webp
      - assets/flutter_dash.svg
      - assets/flutter_icon.png
      - assets/potato_icon.png
